apps/arr/flaresolverr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: arr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
      app: flaresolverr
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flaresolverr
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.3.21
          ports:
            - name: flaresolverr
              containerPort: 8191
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            path: /var/data/persistence/arr/flaresolverr
            type: DirectoryOrCreate
