apps/arr/flaresolverr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr-service
  namespace: arr
  labels:
    app.kubernetes.io/name: flaresolverr
    app: flaresolverr
spec:
  ports:
    - port: 8191
      targetPort: flaresolverr
      name: flaresolverr
  selector:
    app.kubernetes.io/name: flaresolverr
    app: flaresolverr
