apps/arr/flaresolverr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr-ingress
  namespace: arr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.8.222
    traefik.ingress.kubernetes.io/router.entrypoints: local
spec:
  ingressClassName: traefik
  rules:
    - host: flaresolverr.local.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr-service
                port:
                  name: flaresolverr
  tls:
    - secretName: local-tls
      hosts:
        - flaresolverr.local.boomerok.dev
